cocoa: reset observer in HungRendererController dealloc

HungRendererController autoreleases itself, which doesn't work well when it
doesn't actually hold a reference to the containing window (which it doesn't
in MacViews builds). This fixes the HungRendererController interactive UI test.

Bug: 823517
Change-Id: I5fc14faa8eeaba7b20f5e922a43d4817ca2c810a
Reviewed-on: https://chromium-review.googlesource.com/1015261
Reviewed-by: Robert Liao <robliao@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551412}
Former-commit-id: e0ea06e31ab0d3d13b2a4cdfd8fb1a65ae49bf28